--- a/dmu4/dmu4_sm_NGP/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_NGP/generate_holes.ipynb
@@ -223,6 +223,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda env:herschelhelp_internal]",
    "language": "python",
@@ -238,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
